# Traffic_Analytics_Proposal

./: .dockerignore  .gitignore  BBox_Trigger_Frame_Buffering_Design.docx  DetectionLogs_AppendOnly_DB_Design.docx  README.md  TODO_3rd_merge_review.md  TROUBLESHOOTING.md  Traffic_Analytics_3rd_Merge_Team_Share.docx  [KDT] 인천부평_1기_1조_단위테스트_결과서(1차).hwp  [KDT] 인천부평_1기_1조_단위테스트_계획서(1차).hwp  [KDT] 인천부평_1기_1조_단위테스트_계획서(2차).hwp  artifact_01_worklog_troubleshooting.md  docker-compose.yml  ~$affic_Analytics_3rd_Merge_Team_Share.docx  번호판_OCR_Crop_저장_및_대시보드_조회_설계서.docx
predictive_ml/: .gitignore  ai_todo_progress_2026_06_16.md  evaluate_lstm_ae.py  evaluate_lstm_ae_v2.py  evaluate_lstm_ae_v4_precursor.py  evaluate_lstm_ae_v5_timepattern.py  evaluate_lstm_ae_v6_timepattern_precursor.py  fastapi_integration_notes.md  generate_fault_samples4_precursor.py  generate_simulation_data.py  generate_simulation_data2.py  generate_simulation_data5_timepattern.py  generate_simulation_data6_timepattern_precursor.py  pyproject.toml  train_lstm_ae.py  train_lstm_ae_v2.py  train_lstm_ae_v5_timepattern.py  train_lstm_ae_v6_timepattern_precursor.py
predictive_ml/configs/: detector-policy.yaml
predictive_ml/experiments/: experiment_registry.md  lstm_ae_version_results_summary.md
predictive_ml/model/: artifact_sha256_v6_timepattern_precursor.json  feature_schema_v6_timepattern_precursor.json  lstm_ae.pt  lstm_ae_v2_ep25_thr999.pt  lstm_ae_v3_thr999.pt  lstm_ae_v5_timepattern_thr999.pt  lstm_ae_v6_timepattern_precursor_thr999.pt  metrics.json  metrics_v2_ep25_thr999.json  metrics_v3_thr999.json  (+10 more)
(+523 files in other folders)
