[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tas-predictive-ml"
version = "0.1.0"
description = "TAS predictive maintenance detector package"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "scikit-learn",
  "torch",
]

[tool.setuptools.packages.find]
where = ["src"]
